# django-flashcard

./: .gitignore  README.md  db.sqlite3  gui.py  pyproject.toml  requirements.txt  setup.py  test.csv
.github/workflows/: django.yml
cards/: algorithm.py  forms.py  models.py  urls.py  views.py
cards/migrations/: 0001_initial.py  0002_boxspacingreview.py  0003_delete_boxspacingreview_alter_card_options_and_more.py  0004_alter_card_repetitions.py
cards/templates/cards/: base.html  box.html  card.html  card_check_form.html  card_form.html  card_list.html  navigation.html
cards/templatetags/: cards_tags.py
core/: settings.py  urls.py
